--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/magicdawn/nodebars#readme",
   "dependencies": {
+    "handlebars": "^3.0.3",
     "semver": "^5.0.1"
   }
 }
