--- a/package.json
+++ b/package.json
@@ -28,5 +28,12 @@
   "dependencies": {
     "handlebars": "^3.0.3",
     "semver": "^5.0.1"
+  },
+  "devDependencies": {
+    "cheerio": "^0.19.0",
+    "coveralls": "^2.11.3",
+    "istanbul-harmony": "^0.3.16",
+    "mocha": "^2.2.5",
+    "should": "^7.0.2"
   }
 }
