--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ node_js:
   - "iojs-v1"
   - "iojs-v2"
 script: "make test-cover"
-after_script: "cat ./coverage/lcov.info | coveralls"
+after_script: "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
 notifications:
   email: false
